# az-langchain

./: .env-example  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
az_langchain/: azure_openai_model.py  azure_phi3_model.py  logger.py  main.py  output_parser.py  templates.py
